Commit the core tdb-search rust http kernel
